2007-03-04 19:26 +0100  Alain Bench  <veronatif@free.fr>  (4dc1d87f4c25)

	* doc/manual.xml.head, init.h: Doc fixes and updates concerning hooks

	- Add reply-hooks and send2-hooks in lists they miss.
	- Fix that they all take full patterns, not only regexps.
	- Note interaction with $default_hook.
	- Enumerate them in execution order/increasing priority.
	- Add iconv-hook, remove a duplicate charset-hook.

2007-03-06 15:45 -0800  Brendan Cully  <brendan@kublai.com>  (607688bd77b1)

	* ChangeLog, hg-commit: Add check_sec.sh call

2007-03-06 15:43 -0800  Brendan Cully  <brendan@kublai.com>  (52c24a8a42a8)

	* hg-commit: Make hg commit less clever

2007-03-06 11:58 -0800  Brendan Cully  <brendan@kublai.com>  (13a810347ee1)

	* ChangeLog: # changelog commit

2007-03-06 11:13 -0800  Brendan Cully  <brendan@kublai.com>  (6f2088ff044b)

	* PATCHES: Undo bad PATCHES commit from f=f

2007-03-06 09:49 -0800  Rocco Rutte  <pdmef@gmx.net>  (2e4e1cc18c22)

	* Makefile.am, PATCHES, doc/manual.xml.head, handler.c, muttlib.c,
	protos.h, rfc3676.c, rfc3676.h, send.c: New format=flowed handler.

2007-03-02 21:12 -0800  Brendan Cully  <brendan@kublai.com>  (537672d8fefb)

	* attach.c, globals.h, init.c, init.h, lib.c, mh.c, mx.c: Add $umask
	for mailboxes and attachments.

	init.c could really use some refactoring.

2007-03-05 14:50 -0800  Pawel Dziekonski  <dzieko@pwr.wroc.pl>  (de57c607e9d3)

	* po/pl.po: Updated Polish translation.

2007-03-03 22:09 -0800  Brendan Cully  <brendan@kublai.com>  (08b1fa8cd55e)

	* Makefile.am: Do not append ${prefix}/include to CPPFLAGS. If
	configure didn't see it, neither should make. (closes: #2603)

2007-03-03 21:49 -0800  Rado S  <regrado@web.de>  (d990dcbbf184)

	* color.c: Increase buffer for color-command regular expressions.

2007-03-03 21:26 -0800  Brendan Cully  <brendan@kublai.com>  (574dbb2c6590)

	* init.h: Revise status_format docs for %??&?. (closes: #2805)

2007-03-03 21:24 -0800  Brendan Cully  <brendan@kublai.com>  (2e296bd4cdfb)
