@@ -49,7 +49,11 @@ void fgetconv_close (FGETCONV **);
 void mutt_set_langinfo_charset (void);
 char *mutt_get_default_charset ();
 
-#define M_ICONV_HOOK_FROM 1
-#define M_ICONV_HOOK_TO   2
+/* flags for charset.c:mutt_convert_string(), fgetconv_open(), and
+ * mutt_iconv_open(). Note that applying charset-hooks to tocode is
+ * never needed, and sometimes hurts: Hence there is no M_ICONV_HOOK_TO
+ * flag.
+ */
+#define M_ICONV_HOOK_FROM 1	/* apply charset-hooks to fromcode */
 
 #endif /* _CHARSET_H */
